paas/connect-ui/connect-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: connect-ui
  name: connect-ui-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: connect-ui
  sessionAffinity: None
  type: LoadBalancer
