paas/connect-ui/connect-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/ip_whitelist: 150.254.169.100/32 150.254.169.54/32
      150.254.169.102/32 62.3.171.0/32 158.177.7.254/32 178.62.250.193/32 150.254.155.236
  labels:
    app: connect-ui
  name: connect-ui-route
spec:
  host: kafka-streams-poc-connect-ui.apps.dcw1.paas.psnc.pl
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: connect-ui-service
    weight: 100
  wildcardPolicy: None
